--- a/app/src/main/res/layout/activity_grivence.xml
+++ b/app/src/main/res/layout/activity_grivence.xml
@@ -95,4 +95,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:hint="Description:"
+        android:fontFamily="@font/cabin_regular"/>
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+
+
+
+
+
+    </LinearLayout>
+
 </LinearLayout>
