--- a/app/src/main/res/drawable/ssplash.xml
+++ b/app/src/main/res/drawable/ssplash.xml
@@ -9,7 +9,7 @@
         >
         <bitmap
             android:gravity="center"
-            android:src="@drawable/books"/>
+            android:src="@drawable/a"/>
     </item>
 
 </layer-list>
