--- a/app/src/main/res/layout/notification_fragment.xml
+++ b/app/src/main/res/layout/notification_fragment.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:layout_marginBottom="60dp"
     android:background="#ffffff"
     android:layout_height="match_parent">
     <LinearLayout
@@ -37,80 +38,11 @@
         </LinearLayout>
 
 
-
-        <androidx.cardview.widget.CardView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/my_recycler_view"
+            android:scrollbars="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="2dp">
-            <LinearLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="20dp"
-                    android:layout_height="98dp"
-                    android:text=" "
-                    android:background="@color/rejected"/>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="374dp"
-                    android:layout_height="97dp">
-
-
-                    <TextView
-                        app:layout_constraintLeft_toRightOf="@id/reportidtitle"
-                        android:id="@+id/reportidtitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginTop="4dp"
-                        android:text="Report Id:"
-                        android:textSize="10dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="29dp"
-                        android:layout_marginStart="8dp"
-                        android:text="254896587"
-                        android:textSize="10dp"
-                        app:layout_constraintBaseline_toBaselineOf="@+id/reportidtitle"
-                        app:layout_constraintStart_toEndOf="@+id/reportidtitle" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="23dp"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginStart="15dp"
-                        android:text="Latest Update: "
-                        android:textSize="15dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="12dp"
-                        android:layout_marginEnd="108dp"
-                        android:text="group 3 to address soon"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </LinearLayout>
-
-
-        </androidx.cardview.widget.CardView>
-
+            android:layout_height="match_parent"/>
 
 
 
