--- a/app/src/main/res/layout/report_fragment.xml
+++ b/app/src/main/res/layout/report_fragment.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:layout_marginBottom="60dp"
     android:background="#ffffff"
     android:layout_height="match_parent">
     <LinearLayout
@@ -89,136 +90,16 @@
             android:layout_height="1dp"
             android:background="#000000"/>
 
-
-
-
-
-        <androidx.cardview.widget.CardView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/my_recycler_view"
+            android:scrollbars="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="2dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/status"
-                    android:layout_width="20dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/bg_screen4"/>
-                <ImageView
-                    android:id="@+id/image"
-                    android:layout_width="100dp"
-                    android:src="@drawable/books"
-                    android:layout_height="match_parent" />
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-
-                    <RelativeLayout
-                        android:padding="5dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:id="@+id/reportidtitle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Report Id:"
-                            android:textSize="10dp"
-                            app:layout_constraintStart_toEndOf="@+id/image"
-                            />
-
-                        <TextView
-                            android:id="@+id/reportid"
-                            android:layout_toRightOf="@id/reportidtitle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:text="254896587"
-                            android:textSize="10dp"
-                            />
-                        <TextView
-                            android:id="@+id/villagenametitle"
-                            android:layout_below="@id/reportidtitle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Village name:"/>
-
-                        <TextView
-                            android:id="@+id/villagename"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/reportid"
-                            android:layout_toRightOf="@id/villagenametitle"
-                            android:text="Village name:" />
-
-                        <TextView
-                            android:id="@+id/reportedtotitle"
-                            android:layout_below="@id/villagenametitle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Reported to : "/>
-
-                        <TextView
-
-                            android:id="@+id/reportedto"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/villagename"
-                            android:layout_toRightOf="@id/reportedtotitle"
-                            android:text="official name" />
-                        <TextView
-                            android:id="@+id/problemtitle"
-                            android:layout_below="@id/reportedtotitle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Problem : "/>
-
-                        <TextView
-
-                            android:id="@+id/problem"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/reportedto"
-                            android:layout_toRightOf="@id/problemtitle"
-                            android:text="some problem" />
-
-                        <TextView
-                            android:id="@+id/lastupdatetitle"
-                            android:layout_below="@id/problemtitle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Last update : "/>
-
-                        <TextView
-                            android:id="@+id/update"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/problem"
-                            android:layout_toRightOf="@id/lastupdatetitle"
-                            android:text="some update" />
-
-
-
-                    </RelativeLayout>
-                </LinearLayout>
-
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-
+            android:layout_height="match_parent"/>
 
 
 
     </LinearLayout>
+
+
+
 </ScrollView>
